--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <DOCTYPE HTML>
+
+  <title>Global Owen Points Rankings</title>
+
+<ol>
+  <li>1. Grace Pyon: 20,000,000,001 </li>
+  <li>2. Owen Bridges: 10,000,000,000</li>
+  <li>3. Thomas Clancy: 5</li>
+  <li>4. Alan Chen: 0</li>
+  <li>5. Michael: 0</li>
+  <li>6. James Henry Southern: -1</li>
+  <li>7. Avery: -2</li>
+  <li>8. Koko: -3</li>
+  <li>9. Mrs. Hart: -4</li>
+  <li>10. William Niemic-Andorfer: -4</li>
+  <li>11. Daniel Duke: -11</li>
+  <li>12. Aidan: -2,000,000,000</li>
+</ol>
