--- a/wheel.html
+++ b/wheel.html
@@ -3,4 +3,4 @@
 
 <iframe src="https://pickerwheel.com/emb/?choices=+1,-1,+3,-1,+5,-2,+4,-10,+4,-2,+5,-1,+3,-1,+1,-1,+10,-1&title=Solos%20Gambling%20Wheel" width="100%" height="550px" scrolling="no" frameborder="0"></iframe>
 
-<iframe src="https://pickerwheel.com/emb/?choices=+1,-1,+3,-1,+5,-2,+4,-10,+4,-2,+5,-1,+3,-1,+1,-1,+10,-1&title=Solos%20Gambling%20Wheel" width="100%" height="550px" scrolling="no" frameborder="0"></iframe>
+<iframe src="https://pickerwheel.com/emb/?choices=+2,-2,+6,-2,+10,-4,+14,-20,+14,-4,+10,-2,+6,-2,+2,-2,+20,-2&title=Duos%20Gambling%20Wheel" width="100%" height="550px" scrolling="no" frameborder="0"></iframe>
